hphp/hack/test/typecheck/errors/4328-constant_does_not_match_enum_type.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

enum Foo : string {
  A = 6;
}
